New backend class for tiles v1

--- a/Chess/qml.qrc
+++ b/Chess/qml.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>ChessBoardTile.qml</file>
+        <file>TileFront.qml</file>
     </qresource>
     <qresource prefix="/JavaScriptFiles">
         <file>Utilities.js</file>
