--- a/Chess/qml.qrc
+++ b/Chess/qml.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>TileFront.qml</file>
+        <file>FrameFront.qml</file>
     </qresource>
     <qresource prefix="/JavaScriptFiles">
         <file>Utilities.js</file>
