Added possibility to drop figures on tile v1

--- a/Chess/qml.qrc
+++ b/Chess/qml.qrc
@@ -3,8 +3,14 @@
         <file>main.qml</file>
         <file>TileFront.qml</file>
         <file>FrameFront.qml</file>
+        <file>FigureFront.qml</file>
     </qresource>
     <qresource prefix="/JavaScriptFiles">
         <file>Utilities.js</file>
+    </qresource>
+    <qresource prefix="/Images">
+        <file>Images/figure.png</file>
+        <file>Images/figure2.png</file>
+        <file>Images/nike.png</file>
     </qresource>
 </RCC>
