Started to fix problem with taking figures on same tiles

--- a/Chess/qml.qrc
+++ b/Chess/qml.qrc
@@ -19,4 +19,7 @@
         <file>Images/rookBlack.png</file>
         <file>Images/rookWhite.png</file>
     </qresource>
+    <qresource prefix="/JSUtilities">
+        <file>FiguresInstanesHandler.js</file>
+    </qresource>
 </RCC>
