--- a/Chess/qml.qrc
+++ b/Chess/qml.qrc
@@ -5,6 +5,7 @@
         <file>FigureFront.qml</file>
         <file>VerticalCoordinates.qml</file>
         <file>HorizontalCoordinates.qml</file>
+        <file>FigureSelect.qml</file>
     </qresource>
     <qresource prefix="/Images">
         <file>Images/kingBlack.png</file>
